# mssql_mcp_server

./: .env  .env.example  OPENWEBUI_SETUP.md  README.md  README_LM_STUDIO.md  mcp_server.py  mssql_mcp_http_tool.py  pyproject.toml  start_mssql_mcp.bat
mssql_mcp_server/: __main__.py  http.py  server.py
scripts/: install.sh  mssql-mcp.service
